# HEPReference

./: CITATION.cff  CITATIONS.bib  CMakeLists.txt  README.md
CMake/: hepreference-config.cmake.in
include/HEPReference/: ArxivRegex.hh  ArxivRequest.hh  InspireRequest.hh  Library.hh  NuHepMC.hh  Parser.hh  Reference.hh  Request.hh
include/spdmon/: spdmon.hh
src/: CMakeLists.txt
src/HEPReference/: ArxivRequest.cc  CMakeLists.txt  Library.cc  NuHepMC.cc  NuHepMCParse.cc  Reference.cc  cpr.cc
